crates/emitter-query/tests/snapshots/snapshots__snapshot_additional_props_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { listUsersResponse, createUserResponse, createUserBody, updateUserPathParams, updateUserResponse, updateUserBody } from './types.gen';
import type { RequestConfig } from './client.gen';
import { listUsers, createUser, updateUser } from './client.gen';

export const listUsersQueryKey = () =>
  ['listUsers'] as const;

export const listUsersOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: listUsersQueryKey(),
    queryFn: () => listUsers(config),
  });

export const useListUsers = (
  options?: Partial<UseQueryOptions<listUsersResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listUsersOptions(config), ...options });

export const useListUsersSuspense = (
  options?: Partial<UseQueryOptions<listUsersResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listUsersOptions(config), ...options });

export const prefetchListUsers = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listUsersOptions(config));

export const listUsersLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(listUsersOptions());

export const useCreateUser = (
  options?: UseMutationOptions<createUserResponse, Error, createUserBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: createUserBody) => createUser(body, config),
    ...options,
  });

export const useUpdateUser = (
  options?: UseMutationOptions<updateUserResponse, Error, { pathParams: updateUserPathParams; body: updateUserBody }>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (vars: { pathParams: updateUserPathParams; body: updateUserBody }) => updateUser(vars.pathParams, vars.body, config),
    ...options,
  });
