crates/emitter-query/tests/snapshots/snapshots__snapshot_allof_conflict_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { listEntitiesResponse } from './types.gen';
import type { RequestConfig } from './client.gen';
import { listEntities } from './client.gen';

export const listEntitiesQueryKey = () =>
  ['listEntities'] as const;

export const listEntitiesOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: listEntitiesQueryKey(),
    queryFn: () => listEntities(config),
  });

export const useListEntities = (
  options?: Partial<UseQueryOptions<listEntitiesResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listEntitiesOptions(config), ...options });

export const useListEntitiesSuspense = (
  options?: Partial<UseQueryOptions<listEntitiesResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listEntitiesOptions(config), ...options });

export const prefetchListEntities = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listEntitiesOptions(config));

export const listEntitiesLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(listEntitiesOptions());
