crates/emitter-query/tests/snapshots/snapshots__snapshot_anyof_plain_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { searchResponse, searchBody, listNotificationsResponse } from './types.gen';
import type { RequestConfig } from './client.gen';
import { search, listNotifications } from './client.gen';

export const useSearch = (
  options?: UseMutationOptions<searchResponse, Error, searchBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: searchBody) => search(body, config),
    ...options,
  });

export const listNotificationsQueryKey = () =>
  ['listNotifications'] as const;

export const listNotificationsOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: listNotificationsQueryKey(),
    queryFn: () => listNotifications(config),
  });

export const useListNotifications = (
  options?: Partial<UseQueryOptions<listNotificationsResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listNotificationsOptions(config), ...options });

export const useListNotificationsSuspense = (
  options?: Partial<UseQueryOptions<listNotificationsResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listNotificationsOptions(config), ...options });

export const prefetchListNotifications = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listNotificationsOptions(config));

export const listNotificationsLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(listNotificationsOptions());
