crates/emitter-query/tests/snapshots/snapshots__snapshot_edge_cases_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { Get__no-operation-idResponse, replaceAllVoidBody, noParamSchemaQueryParams, noParamSchemaResponse, deeplyNestedResponse, onlyErrorResponseError, nullableArrayResponse, enumOnlyResponseResponse, emptyObjectBodyResponse, emptyObjectBodyBody, multipleSuccessCodesResponse, multipleSuccessCodesBody, multipleSuccessCodesError } from './types.gen';
import type { RequestConfig, ApiError } from './client.gen';
import { Get__no-operation-id, emptyResponses, replaceAllVoid, deleteAllVoid, noParamSchema, deeplyNested, onlyErrorResponse, nullableArray, enumOnlyResponse, emptyObjectBody, textResponse, blobResponse, multipleSuccessCodes } from './client.gen';

export const Get__no-operation-idQueryKey = () =>
  ['Get__no-operation-id'] as const;

export const Get__no-operation-idOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: Get__no-operation-idQueryKey(),
    queryFn: () => Get__no-operation-id(config),
  });

export const useGet__no-operation-id = (
  options?: Partial<UseQueryOptions<Get__no-operation-idResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...Get__no-operation-idOptions(config), ...options });

export const useGet__no-operation-idSuspense = (
  options?: Partial<UseQueryOptions<Get__no-operation-idResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...Get__no-operation-idOptions(config), ...options });

export const prefetchGet__no-operation-id = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(Get__no-operation-idOptions(config));

export const Get__no-operation-idLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(Get__no-operation-idOptions());

export const useEmptyResponses = (
  options?: UseMutationOptions<void, Error, void>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: () => emptyResponses(config),
    ...options,
  });

export const useReplaceAllVoid = (
  options?: UseMutationOptions<void, Error, replaceAllVoidBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: replaceAllVoidBody) => replaceAllVoid(body, config),
    ...options,
  });

export const useDeleteAllVoid = (
  options?: UseMutationOptions<void, Error, void>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: () => deleteAllVoid(config),
    ...options,
  });

export const noParamSchemaQueryKey = (params?: noParamSchemaQueryParams) =>
  ['noParamSchema', ...(params ? [params] : [])] as const;

export const noParamSchemaOptions = (params?: noParamSchemaQueryParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: noParamSchemaQueryKey(params),
    queryFn: () => noParamSchema(params, config),
  });

export const useNoParamSchema = (
  params?: noParamSchemaQueryParams,
  options?: Partial<UseQueryOptions<noParamSchemaResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...noParamSchemaOptions(params, config), ...options });

export const useNoParamSchemaSuspense = (
  params?: noParamSchemaQueryParams,
  options?: Partial<UseQueryOptions<noParamSchemaResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...noParamSchemaOptions(params, config), ...options });

export const prefetchNoParamSchema = (
  queryClient: QueryClient,
  params?: noParamSchemaQueryParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(noParamSchemaOptions(params, config));

export const noParamSchemaLoader = (queryClient: QueryClient) =>
  (params: noParamSchemaQueryParams) =>
    queryClient.ensureQueryData(noParamSchemaOptions(params));

export const deeplyNestedQueryKey = () =>
  ['deeplyNested'] as const;

export const deeplyNestedOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: deeplyNestedQueryKey(),
    queryFn: () => deeplyNested(config),
  });

export const useDeeplyNested = (
  options?: Partial<UseQueryOptions<deeplyNestedResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...deeplyNestedOptions(config), ...options });

export const useDeeplyNestedSuspense = (
  options?: Partial<UseQueryOptions<deeplyNestedResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...deeplyNestedOptions(config), ...options });

export const prefetchDeeplyNested = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(deeplyNestedOptions(config));

export const deeplyNestedLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(deeplyNestedOptions());

export const onlyErrorResponseQueryKey = () =>
  ['onlyErrorResponse'] as const;

export const onlyErrorResponseOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: onlyErrorResponseQueryKey(),
    queryFn: () => onlyErrorResponse(config),
  });

export const useOnlyErrorResponse = (
  options?: Partial<UseQueryOptions<void>>,
  config?: RequestConfig,
) =>
  useQuery({ ...onlyErrorResponseOptions(config), ...options });

export const useOnlyErrorResponseSuspense = (
  options?: Partial<UseQueryOptions<void>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...onlyErrorResponseOptions(config), ...options });

export const prefetchOnlyErrorResponse = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(onlyErrorResponseOptions(config));

export const onlyErrorResponseLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(onlyErrorResponseOptions());

export const nullableArrayQueryKey = () =>
  ['nullableArray'] as const;

export const nullableArrayOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: nullableArrayQueryKey(),
    queryFn: () => nullableArray(config),
  });

export const useNullableArray = (
  options?: Partial<UseQueryOptions<nullableArrayResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...nullableArrayOptions(config), ...options });

export const useNullableArraySuspense = (
  options?: Partial<UseQueryOptions<nullableArrayResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...nullableArrayOptions(config), ...options });

export const prefetchNullableArray = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(nullableArrayOptions(config));

export const nullableArrayLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(nullableArrayOptions());

export const enumOnlyResponseQueryKey = () =>
  ['enumOnlyResponse'] as const;

export const enumOnlyResponseOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: enumOnlyResponseQueryKey(),
    queryFn: () => enumOnlyResponse(config),
  });

export const useEnumOnlyResponse = (
  options?: Partial<UseQueryOptions<enumOnlyResponseResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...enumOnlyResponseOptions(config), ...options });

export const useEnumOnlyResponseSuspense = (
  options?: Partial<UseQueryOptions<enumOnlyResponseResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...enumOnlyResponseOptions(config), ...options });

export const prefetchEnumOnlyResponse = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(enumOnlyResponseOptions(config));

export const enumOnlyResponseLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(enumOnlyResponseOptions());

export const useEmptyObjectBody = (
  options?: UseMutationOptions<emptyObjectBodyResponse, Error, emptyObjectBodyBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: emptyObjectBodyBody) => emptyObjectBody(body, config),
    ...options,
  });

export const textResponseQueryKey = () =>
  ['textResponse'] as const;

export const textResponseOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: textResponseQueryKey(),
    queryFn: () => textResponse(config),
  });

export const useTextResponse = (
  options?: Partial<UseQueryOptions<string>>,
  config?: RequestConfig,
) =>
  useQuery({ ...textResponseOptions(config), ...options });

export const useTextResponseSuspense = (
  options?: Partial<UseQueryOptions<string>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...textResponseOptions(config), ...options });

export const prefetchTextResponse = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(textResponseOptions(config));

export const textResponseLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(textResponseOptions());

export const blobResponseQueryKey = () =>
  ['blobResponse'] as const;

export const blobResponseOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: blobResponseQueryKey(),
    queryFn: () => blobResponse(config),
  });

export const useBlobResponse = (
  options?: Partial<UseQueryOptions<Blob>>,
  config?: RequestConfig,
) =>
  useQuery({ ...blobResponseOptions(config), ...options });

export const useBlobResponseSuspense = (
  options?: Partial<UseQueryOptions<Blob>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...blobResponseOptions(config), ...options });

export const prefetchBlobResponse = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(blobResponseOptions(config));

export const blobResponseLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(blobResponseOptions());

export const useMultipleSuccessCodes = (
  options?: UseMutationOptions<multipleSuccessCodesResponse, ApiError<multipleSuccessCodesError>, multipleSuccessCodesBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: multipleSuccessCodesBody) => multipleSuccessCodes(body, config),
    ...options,
  });
