crates/emitter-query/tests/snapshots/snapshots__snapshot_error_responses_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { listUsersQueryParams, listUsersResponse, listUsersError, createUserResponse, createUserBody, createUserError, getUserPathParams, getUserResponse, getUserError, deleteUserPathParams, deleteUserError } from './types.gen';
import type { RequestConfig, ApiError } from './client.gen';
import { listUsers, createUser, getUser, deleteUser } from './client.gen';

export const listUsersQueryKey = (params?: listUsersQueryParams) =>
  ['listUsers', ...(params ? [params] : [])] as const;

export const listUsersOptions = (params?: listUsersQueryParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: listUsersQueryKey(params),
    queryFn: () => listUsers(params, config),
  });

export const useListUsers = (
  params?: listUsersQueryParams,
  options?: Partial<UseQueryOptions<listUsersResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listUsersOptions(params, config), ...options });

export const useListUsersSuspense = (
  params?: listUsersQueryParams,
  options?: Partial<UseQueryOptions<listUsersResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listUsersOptions(params, config), ...options });

export const prefetchListUsers = (
  queryClient: QueryClient,
  params?: listUsersQueryParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listUsersOptions(params, config));

export const listUsersLoader = (queryClient: QueryClient) =>
  (params: listUsersQueryParams) =>
    queryClient.ensureQueryData(listUsersOptions(params));

export const useCreateUser = (
  options?: UseMutationOptions<createUserResponse, ApiError<createUserError>, createUserBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: createUserBody) => createUser(body, config),
    ...options,
  });

export const getUserQueryKey = (params?: getUserPathParams) =>
  ['getUser', ...(params ? [params] : [])] as const;

export const getUserOptions = (params?: getUserPathParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: getUserQueryKey(params),
    queryFn: () => getUser(params!, config),
    enabled: params !== undefined,
  });

export const useGetUser = (
  params?: getUserPathParams,
  options?: Partial<UseQueryOptions<getUserResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...getUserOptions(params, config), ...options });

export const useGetUserSuspense = (
  params?: getUserPathParams,
  options?: Partial<UseQueryOptions<getUserResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...getUserOptions(params, config), ...options });

export const prefetchGetUser = (
  queryClient: QueryClient,
  params?: getUserPathParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(getUserOptions(params, config));

export const getUserLoader = (queryClient: QueryClient) =>
  (params: getUserPathParams) =>
    queryClient.ensureQueryData(getUserOptions(params));

export const useDeleteUser = (
  options?: UseMutationOptions<void, ApiError<deleteUserError>, deleteUserPathParams>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (pathParams: deleteUserPathParams) => deleteUser(pathParams, config),
    ...options,
  });
