crates/emitter-query/tests/snapshots/snapshots__snapshot_header_cookie_params_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { listResourcesQueryParams, listResourcesResponse, getResourcePathParams, getResourceResponse } from './types.gen';
import type { RequestConfig } from './client.gen';
import { listResources, getResource } from './client.gen';

export const listResourcesQueryKey = (params?: listResourcesQueryParams) =>
  ['listResources', ...(params ? [params] : [])] as const;

export const listResourcesOptions = (params?: listResourcesQueryParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: listResourcesQueryKey(params),
    queryFn: () => listResources(params, config),
  });

export const useListResources = (
  params?: listResourcesQueryParams,
  options?: Partial<UseQueryOptions<listResourcesResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listResourcesOptions(params, config), ...options });

export const useListResourcesSuspense = (
  params?: listResourcesQueryParams,
  options?: Partial<UseQueryOptions<listResourcesResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listResourcesOptions(params, config), ...options });

export const prefetchListResources = (
  queryClient: QueryClient,
  params?: listResourcesQueryParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listResourcesOptions(params, config));

export const listResourcesLoader = (queryClient: QueryClient) =>
  (params: listResourcesQueryParams) =>
    queryClient.ensureQueryData(listResourcesOptions(params));

export const getResourceQueryKey = (params?: getResourcePathParams) =>
  ['getResource', ...(params ? [params] : [])] as const;

export const getResourceOptions = (params?: getResourcePathParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: getResourceQueryKey(params),
    queryFn: () => getResource(params!, config),
    enabled: params !== undefined,
  });

export const useGetResource = (
  params?: getResourcePathParams,
  options?: Partial<UseQueryOptions<getResourceResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...getResourceOptions(params, config), ...options });

export const useGetResourceSuspense = (
  params?: getResourcePathParams,
  options?: Partial<UseQueryOptions<getResourceResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...getResourceOptions(params, config), ...options });

export const prefetchGetResource = (
  queryClient: QueryClient,
  params?: getResourcePathParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(getResourceOptions(params, config));

export const getResourceLoader = (queryClient: QueryClient) =>
  (params: getResourcePathParams) =>
    queryClient.ensureQueryData(getResourceOptions(params));
