crates/emitter-query/tests/snapshots/snapshots__snapshot_inline_schemas_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { getStatusResponse, echoResponse, echoBody, getConfigResponse, getConfigError, getItemHistoryPathParams, getItemHistoryResponse } from './types.gen';
import type { RequestConfig, ApiError } from './client.gen';
import { getStatus, echo, getConfig, getItemHistory } from './client.gen';

export const getStatusQueryKey = () =>
  ['getStatus'] as const;

export const getStatusOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: getStatusQueryKey(),
    queryFn: () => getStatus(config),
  });

export const useGetStatus = (
  options?: Partial<UseQueryOptions<getStatusResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...getStatusOptions(config), ...options });

export const useGetStatusSuspense = (
  options?: Partial<UseQueryOptions<getStatusResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...getStatusOptions(config), ...options });

export const prefetchGetStatus = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(getStatusOptions(config));

export const getStatusLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(getStatusOptions());

export const useEcho = (
  options?: UseMutationOptions<echoResponse, Error, echoBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: echoBody) => echo(body, config),
    ...options,
  });

export const getConfigQueryKey = () =>
  ['getConfig'] as const;

export const getConfigOptions = (config?: RequestConfig) =>
  queryOptions({
    queryKey: getConfigQueryKey(),
    queryFn: () => getConfig(config),
  });

export const useGetConfig = (
  options?: Partial<UseQueryOptions<getConfigResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...getConfigOptions(config), ...options });

export const useGetConfigSuspense = (
  options?: Partial<UseQueryOptions<getConfigResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...getConfigOptions(config), ...options });

export const prefetchGetConfig = (
  queryClient: QueryClient,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(getConfigOptions(config));

export const getConfigLoader = (queryClient: QueryClient) =>
  () => queryClient.ensureQueryData(getConfigOptions());

export const getItemHistoryQueryKey = (params?: getItemHistoryPathParams) =>
  ['getItemHistory', ...(params ? [params] : [])] as const;

export const getItemHistoryOptions = (params?: getItemHistoryPathParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: getItemHistoryQueryKey(params),
    queryFn: () => getItemHistory(params!, config),
    enabled: params !== undefined,
  });

export const useGetItemHistory = (
  params?: getItemHistoryPathParams,
  options?: Partial<UseQueryOptions<getItemHistoryResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...getItemHistoryOptions(params, config), ...options });

export const useGetItemHistorySuspense = (
  params?: getItemHistoryPathParams,
  options?: Partial<UseQueryOptions<getItemHistoryResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...getItemHistoryOptions(params, config), ...options });

export const prefetchGetItemHistory = (
  queryClient: QueryClient,
  params?: getItemHistoryPathParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(getItemHistoryOptions(params, config));

export const getItemHistoryLoader = (queryClient: QueryClient) =>
  (params: getItemHistoryPathParams) =>
    queryClient.ensureQueryData(getItemHistoryOptions(params));
