crates/emitter-query/tests/snapshots/snapshots__snapshot_multipart_paginated_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useInfiniteQuery, useMutation, useSuspenseQuery, queryOptions, infiniteQueryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseInfiniteQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { uploadFileResponse, uploadFileBody, listItemsQueryParams, listItemsResponse, listCursoredQueryParams, listCursoredResponse, updateTextBody } from './types.gen';
import type { RequestConfig } from './client.gen';
import { uploadFile, listItems, listCursored, updateText } from './client.gen';

export const useUploadFile = (
  options?: UseMutationOptions<uploadFileResponse, Error, uploadFileBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: uploadFileBody) => uploadFile(body, config),
    ...options,
  });

export const listItemsQueryKey = (params?: listItemsQueryParams) =>
  ['listItems', ...(params ? [params] : [])] as const;

export const listItemsOptions = (params?: listItemsQueryParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: listItemsQueryKey(params),
    queryFn: () => listItems(params, config),
  });

export const useListItems = (
  params?: listItemsQueryParams,
  options?: Partial<UseQueryOptions<listItemsResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listItemsOptions(params, config), ...options });

export const useListItemsSuspense = (
  params?: listItemsQueryParams,
  options?: Partial<UseQueryOptions<listItemsResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listItemsOptions(params, config), ...options });

export const prefetchListItems = (
  queryClient: QueryClient,
  params?: listItemsQueryParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listItemsOptions(params, config));

export const listItemsLoader = (queryClient: QueryClient) =>
  (params: listItemsQueryParams) =>
    queryClient.ensureQueryData(listItemsOptions(params));

export const useListItemsInfinite = (
  params?: listItemsQueryParams,
  options?: Partial<UseInfiniteQueryOptions<listItemsResponse, Error, listItemsResponse, listItemsResponse, unknown[], number>>,
  config?: RequestConfig,
) =>
  useInfiniteQuery({
    queryKey: [...listItemsQueryKey(params), 'infinite'],
    queryFn: ({ pageParam }) => listItems({ ...params!, offset: pageParam } as any, config),
    initialPageParam: 0,
    getNextPageParam: (lastPage, _allPages, lastPageParam) => {
      if (!Array.isArray(lastPage) || lastPage.length === 0) return undefined;
      return (lastPageParam ?? 0) + lastPage.length;
    },
    ...options,
  });

export const listCursoredQueryKey = (params?: listCursoredQueryParams) =>
  ['listCursored', ...(params ? [params] : [])] as const;

export const listCursoredOptions = (params?: listCursoredQueryParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: listCursoredQueryKey(params),
    queryFn: () => listCursored(params, config),
  });

export const useListCursored = (
  params?: listCursoredQueryParams,
  options?: Partial<UseQueryOptions<listCursoredResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listCursoredOptions(params, config), ...options });

export const useListCursoredSuspense = (
  params?: listCursoredQueryParams,
  options?: Partial<UseQueryOptions<listCursoredResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listCursoredOptions(params, config), ...options });

export const prefetchListCursored = (
  queryClient: QueryClient,
  params?: listCursoredQueryParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listCursoredOptions(params, config));

export const listCursoredLoader = (queryClient: QueryClient) =>
  (params: listCursoredQueryParams) =>
    queryClient.ensureQueryData(listCursoredOptions(params));

export const useListCursoredInfinite = (
  params?: listCursoredQueryParams,
  options?: Partial<UseInfiniteQueryOptions<listCursoredResponse, Error, listCursoredResponse, listCursoredResponse, unknown[], string | undefined>>,
  config?: RequestConfig,
) =>
  useInfiniteQuery({
    queryKey: [...listCursoredQueryKey(params), 'infinite'],
    queryFn: ({ pageParam }) => listCursored({ ...params!, cursor: pageParam } as any, config),
    initialPageParam: undefined as string | undefined,
    getNextPageParam: (lastPage, _allPages, lastPageParam) => {
      // Override getNextPageParam based on your API's cursor field
      return undefined;
    },
    ...options,
  });

export const useUpdateText = (
  options?: UseMutationOptions<void, Error, updateTextBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: updateTextBody) => updateText(body, config),
    ...options,
  });
