crates/emitter-query/tests/snapshots/snapshots__snapshot_openapi31_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { listItemsQueryParams, listItemsResponse, getItemPathParams, getItemResponse, createCoordinateResponse, createCoordinateBody } from './types.gen';
import type { RequestConfig } from './client.gen';
import { listItems, getItem, createCoordinate } from './client.gen';

export const listItemsQueryKey = (params?: listItemsQueryParams) =>
  ['listItems', ...(params ? [params] : [])] as const;

export const listItemsOptions = (params?: listItemsQueryParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: listItemsQueryKey(params),
    queryFn: () => listItems(params, config),
  });

export const useListItems = (
  params?: listItemsQueryParams,
  options?: Partial<UseQueryOptions<listItemsResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listItemsOptions(params, config), ...options });

export const useListItemsSuspense = (
  params?: listItemsQueryParams,
  options?: Partial<UseQueryOptions<listItemsResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listItemsOptions(params, config), ...options });

export const prefetchListItems = (
  queryClient: QueryClient,
  params?: listItemsQueryParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listItemsOptions(params, config));

export const listItemsLoader = (queryClient: QueryClient) =>
  (params: listItemsQueryParams) =>
    queryClient.ensureQueryData(listItemsOptions(params));

export const getItemQueryKey = (params?: getItemPathParams) =>
  ['getItem', ...(params ? [params] : [])] as const;

export const getItemOptions = (params?: getItemPathParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: getItemQueryKey(params),
    queryFn: () => getItem(params!, config),
    enabled: params !== undefined,
  });

export const useGetItem = (
  params?: getItemPathParams,
  options?: Partial<UseQueryOptions<getItemResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...getItemOptions(params, config), ...options });

export const useGetItemSuspense = (
  params?: getItemPathParams,
  options?: Partial<UseQueryOptions<getItemResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...getItemOptions(params, config), ...options });

export const prefetchGetItem = (
  queryClient: QueryClient,
  params?: getItemPathParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(getItemOptions(params, config));

export const getItemLoader = (queryClient: QueryClient) =>
  (params: getItemPathParams) =>
    queryClient.ensureQueryData(getItemOptions(params));

export const useCreateCoordinate = (
  options?: UseMutationOptions<createCoordinateResponse, Error, createCoordinateBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: createCoordinateBody) => createCoordinate(body, config),
    ...options,
  });
