crates/emitter-query/tests/snapshots/snapshots__snapshot_petstore_hooks.snap
---
source: crates/emitter-query/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import { useQuery, useMutation, useSuspenseQuery, queryOptions } from '@tanstack/react-query';
import type { QueryClient, UseQueryOptions, UseMutationOptions } from '@tanstack/react-query';
import type { listPetsQueryParams, listPetsResponse, createPetResponse, createPetBody, getPetPathParams, getPetResponse, deletePetPathParams } from './types.gen';
import type { RequestConfig } from './client.gen';
import { listPets, createPet, getPet, deletePet } from './client.gen';

export const listPetsQueryKey = (params?: listPetsQueryParams) =>
  ['listPets', ...(params ? [params] : [])] as const;

export const listPetsOptions = (params?: listPetsQueryParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: listPetsQueryKey(params),
    queryFn: () => listPets(params, config),
  });

export const useListPets = (
  params?: listPetsQueryParams,
  options?: Partial<UseQueryOptions<listPetsResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...listPetsOptions(params, config), ...options });

export const useListPetsSuspense = (
  params?: listPetsQueryParams,
  options?: Partial<UseQueryOptions<listPetsResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...listPetsOptions(params, config), ...options });

export const prefetchListPets = (
  queryClient: QueryClient,
  params?: listPetsQueryParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(listPetsOptions(params, config));

export const listPetsLoader = (queryClient: QueryClient) =>
  (params: listPetsQueryParams) =>
    queryClient.ensureQueryData(listPetsOptions(params));

export const useCreatePet = (
  options?: UseMutationOptions<createPetResponse, Error, createPetBody>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (body: createPetBody) => createPet(body, config),
    ...options,
  });

export const getPetQueryKey = (params?: getPetPathParams) =>
  ['getPet', ...(params ? [params] : [])] as const;

export const getPetOptions = (params?: getPetPathParams, config?: RequestConfig) =>
  queryOptions({
    queryKey: getPetQueryKey(params),
    queryFn: () => getPet(params!, config),
    enabled: params !== undefined,
  });

export const useGetPet = (
  params?: getPetPathParams,
  options?: Partial<UseQueryOptions<getPetResponse>>,
  config?: RequestConfig,
) =>
  useQuery({ ...getPetOptions(params, config), ...options });

export const useGetPetSuspense = (
  params?: getPetPathParams,
  options?: Partial<UseQueryOptions<getPetResponse>>,
  config?: RequestConfig,
) =>
  useSuspenseQuery({ ...getPetOptions(params, config), ...options });

export const prefetchGetPet = (
  queryClient: QueryClient,
  params?: getPetPathParams,
  config?: RequestConfig,
) =>
  queryClient.prefetchQuery(getPetOptions(params, config));

export const getPetLoader = (queryClient: QueryClient) =>
  (params: getPetPathParams) =>
    queryClient.ensureQueryData(getPetOptions(params));

export const useDeletePet = (
  options?: UseMutationOptions<void, Error, deletePetPathParams>,
  config?: RequestConfig,
) =>
  useMutation({
    mutationFn: (pathParams: deletePetPathParams) => deletePet(pathParams, config),
    ...options,
  });
